# snowglobe

./: .geminiignore  .gitignore  .gitmodules  GEMINI.md  README.md  print_flags.rs  run_android_test.sh  run_android_test_long.sh  run_android_test_rel.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
.tmp_bin/: clang  clang++
app/: analysis_options.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/kotlin/com/example/snowglobe/: MainActivity.kt
app/integration_test/: app_test.dart
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/scripts/: run_tests.sh
app/web/: index.html
app/windows/runner/: Runner.rc
converter/: README.md  convert_qwen3_to_pte.py
demo/: README.md  firebase.json  pubspec.yaml
demo/android/app/: build.gradle.kts  google-services.json
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/kotlin/com/example/snowglobedemo/: MainActivity.kt
demo/android/app/src/main/kotlin/com/hejitech/snowglobedemo/: MainActivity.kt
demo/integration_test/: backend_switch_test.dart  backend_test.dart  chat_test.dart  executorch_chat_test.dart  init_engine_test.dart  simple_test.dart
demo/ios/: Podfile
demo/ios/Runner/: Info.plist  dummy.mm
demo/ios/Runner.xcodeproj/: project.pbxproj
demo/lib/: firebase_options.dart  main.dart
demo/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
demo/lib/src/rust/api/: simple.dart
demo/linux/: CMakeLists.txt
demo/linux/flutter/: generated_plugins.cmake
demo/linux/runner/: my_application.cc
demo/macos/: Podfile
demo/macos/Flutter/: GeneratedPluginRegistrant.swift
demo/macos/Runner.xcodeproj/: project.pbxproj
demo/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
demo/macos/Runner/Configs/: AppInfo.xcconfig  Release.xcconfig
demo/rust/: Cargo.toml  cargokit.yaml
demo/rust/.cargo/: config.toml
demo/rust/src/: build.rs  frb_generated.rs  lib.rs
demo/rust/src/api/: simple.rs
demo/rust_builder/: pubspec.yaml
demo/rust_builder/android/: build.gradle  settings.gradle
demo/rust_builder/android/src/main/: AndroidManifest.xml
demo/rust_builder/ios/: rust_lib_snowglobedemo.podspec
demo/rust_builder/linux/: CMakeLists.txt
demo/rust_builder/macos/: rust_lib_snowglobedemo.podspec
demo/rust_builder/windows/: CMakeLists.txt
demo/scripts/: build_full_android.sh  run_local.sh  toggle_snowglobe_openai.sh
demo/test/: widget_test.dart
demo/web/: index.html  manifest.json
demo/windows/: CMakeLists.txt
demo/windows/flutter/: generated_plugins.cmake
demo/windows/runner/: Runner.rc  main.cpp
design/: 8bit_quantization_android_deployment.md  cacheback_speculative_decoding.md  continuous_batching_v2.md  gemma4_support.md  hexagon_qnn_burn_backend.md  integration_test_model_caching.md  llama_cpp_kv_cache_management.md  llamacpp_tasks.md  npu_gpu_implementation.md  npu_gpu_llamacpp.md  quantization_plan.md  qwen3_5_llamacpp_gaps.md  qwen3_5_support.md  radix_cache.md  replace_executorch_with_litert.md  rig_integration_investigation.md  snowglobe_high_level_api.md  speculative_decoding.md  speed_up_build.md  unified_ai_adapter.md  v2_model_runner_interface.md
engine/: Cargo.toml  README.md  build.rs
engine/src/: lib.rs  model.rs  rope.rs  weight.rs
engine/src/adapter/: executorch_adapter.cpp  executorch_adapter.h  litert_adapter.cpp  litert_adapter.h  mod.rs
engine/src/layer/: large_vocab.rs  mod.rs
engine/src/model/: litert.rs  llama_cpp.rs  mod.rs  qwen.rs  qwen_pte.rs  runner.rs  speculative.rs
engine/src/utils/: downloader.rs
experimental/burn/: Cargo.toml  README.md
experimental/burn-qwen/: Cargo.toml  TASK.md
experimental/burn-qwen/src/: main.rs  model.rs  rope.rs  weight.rs
experimental/burn/src/: main.rs
experimental/hello/: Cargo.toml
experimental/llm/: Cargo.toml  README.md
experimental/llm/src/: main.rs
experimental/script/: test_qwen.py
exporter/: README.md  export_gemma4_litert.py
notes/: fix-ios-build-error.md  kv-cache-performance-improvement-plan.md
report/: integration_testing_and_android_deployment.md  llamacpp_integration_study.md  performance_investigation.md
scripts/: build_executorch_android.sh  build_llamacpp_android.sh  build_llamacpp_linux.sh  install_full_android.sh  run_backend_test.sh  run_chat_test.sh  run_engine_test_android.sh  run_llamacpp_linux.sh  sync_test_assets.sh
