[package]
name = "snowglobe"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20.1", features = ["std", "train", "wgpu"] }
burn-autodiff = { version = "0.20.1", features = ["std"] }
burn-tensor = { version = "0.20.1", features = ["std"] }
burn-wgpu = { version = "0.20.1", optional = true }
bytemuck = "1.25.0"
half = "2.7.1"
hf-hub = "0.4"
indicatif = "0.18.3"
safetensors = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.22.2"
once_cell = "1.19.0"
parking_lot = "0.12.1"
dashmap = "5.5.3"
uuid = { version = "1.8.0", features = ["v4"] }

[features]
default = []
wgpu = ["dep:burn-wgpu"]
