[package]
name = "snowglobe"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20.1", features = ["std", "wgpu", "fusion", "ndarray"] }
burn-tensor = { version = "0.20.1", features = ["std"] }
burn-wgpu = { version = "0.20.1", optional = true }
bytemuck = "1.25.0"
half = { version = "2.7.1", features = ["bytemuck", "serde"] }
reqwest = { version = "0.12.5", default-features = false, features = ["stream", "json", "rustls-tls"] }
safetensors = { version = "0.4.5"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.22.2"
once_cell = "1.19.0"
parking_lot = "0.12.1"
dashmap = "5.5.3"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1", features = ["fs", "macros"] }
futures-util = "0.3"
memmap2 = "0.9.9"
llama-cpp-2 = "0.1"
async-openai = { version = "0.34.0", features = ["chat-completion"] }
tool-parser = "1.1.2"
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"

[features]
default = []
high_perf = ["burn/wgpu", "burn-wgpu"]
qnn = []

[patch.crates-io]
llama-cpp-2 = { path = "../third_party/llama-cpp-rs/llama-cpp-2" }
llama-cpp-sys-2 = { path = "../third_party/llama-cpp-rs/llama-cpp-sys-2" }

[build-dependencies]
cmake = "0.1.57"
cc = "1.0"
