[package]
name = "rust_lib_snowglobedemo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
snowglobe = { version = "0.1.0", path = "../../engine" }
openssl-sys = { version = "0.9", features = ["vendored"] }
async-openai = { version = "0.34.0", features = ["chat-completion"] }
tokio-stream = "0.1.18"
futures-util = "0.3.32"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
default = ["high_perf"]
high_perf = ["snowglobe/high_perf"]
qnn = ["snowglobe/qnn"]

[patch.crates-io]
llama-cpp-2 = { path = "../../third_party/llama-cpp-rs/llama-cpp-2" }
llama-cpp-sys-2 = { path = "../../third_party/llama-cpp-rs/llama-cpp-sys-2" }