[package]
name = "burn-qwen"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20.1", features = ["std", "train", "ndarray"] }
burn-autodiff = { version = "0.20.1", features = ["std"] }
burn-tensor = { version = "0.20.1", features = ["std"] }
burn-wgpu = { version = "0.20.1", optional = true }
bytemuck = "1.25.0"
half = "2.7.1"
hf-hub = "0.3.2"
safetensors = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
wgpu = ["dep:burn-wgpu"]

