[package]
name = "burn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
burn = { git = "https://github.com/tracel-ai/burn", rev = "c1f216f" }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", rev = "c1f216f", default-features = false, features = ["std", "openblas-system"] }
burn-transformers = { git = "https://github.com/tracel-ai/burn", rev = "c1f216f" }
clap = { version = "4.5.4", features = ["derive"] }
hf-hub = "0.3.2"
tokenizers = { version = "0.15.2", default-features = false, features = ["http"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }