[package]
name = "llm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle = { version = "0.9.2-alpha.2", package = "candle-core", git = "https://github.com/huggingface/candle.git" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2" }
clap = { version = "4.5.54", features = ["derive"] }
hf-hub = { version = "0.4.3", features = ["tokio"] }
safetensors = "0.7.0"
serde_json = "1.0.149"
tokenizers = "0.21.4"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.22"
